Add content for theorems, pseudocde, fast transform

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -8212,7 +8212,7 @@
 @incollection{RasGha03a,
 	author={C. E. Rasmussen and C. Williams},
 	title={Bayesian {M}onte {C}arlo},
-	date={2003},
+	year={2003},
 	booktitle={Advances in {N}eural {I}nformation {P}rocessing {S}ystems},
 	editor={S. Thrun and L.~K. Saul and K. Obermayer},
 	volume={15},
