--- a/FJHown23.bib
+++ b/FJHown23.bib
@@ -74,6 +74,7 @@
 
 @string{sub = {\Ignore{u}Manuscripts Under Review}}
 
+@string{statcomp = {Statist.\ Comp.}}
 
 @misc{ChoEtal17b,
 	Author = {S.-C. T. Choi and Y. Ding and F. J. \HickernellFJ and L. Jiang and {\relax Ll}. A. {Jim\'enez Rugama} and D. Li and R. Jagadeeswaran and X. Tong and K. Zhang and Y. Zhang and X. Zhou},
@@ -129,7 +130,7 @@
 	Pubtype = art,
 	Title = {Fast automatic {B}ayesian cubature using lattice sampling},
 	Volume = {29},
-	Issue = {6}
+	Issue = {6},
 	Year = 2019,
 	Bdsk-Url-1 = {https://doi.org/10.1007/s11222-019-09895-9}}
     
